--- a/CSS/index_style.css
+++ b/CSS/index_style.css
@@ -1,62 +1,86 @@
-.container{
-    /* Step 1: Set display to grid */
+@import "blog_design_system.css";
+
+.main-container{
       display:grid;
-   /* Step 2: setup rows amd columns */
       grid-template-columns: 1fr;
-      /* grid-template-columns: 300px 300px 300px; */
       grid-template-rows: 150px 1fr 150px 150px;
       grid-template-areas: 
       "hd"
       "main"
       "sd"
       "ft";
-      border: 2px solid blue;
-
+      
   }
-  .box{
-  /* width: 250px;
-    height: 150px; */
-    
-    border: 1px solid red;
-    background: #F8FA9D;
-    }
+
 
   .header{
     /* row start/column start/ row end/ column end */
     grid-area:hd;
+    padding: 10px;
+    text-align: left;
+  }
+
+  .topnav a {
+    float: left;
+    color: darkgrey;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
   }
 
   .footer{
-    grid-area: ft;  
+    grid-area: ft;
+    padding: 10px;
   }
 
   .sidebar{
     grid-area: sd;
-  }
-
-  .content{
-    grid-area: main;
+    padding: 10px;
   }
 
   .blogs-container {
     grid-area: main;
     display: grid;
-    box-sizing: border-box;
-    flex-basis: 50%;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-items: flex-start;
+    grid-template-columns: 1fr;
   }
 
+  .blog-post {
+    padding: 10px;
+    margin: 10px;
+  }
+
+  /* MEDIA QUERY FOR MEDIUM SCREENS */
   @media(min-width:600px){
+    .container{
+      grid-template-columns: repeat(8, 1fr);
+      grid-template-rows: 150px 1fr 100px;
+      grid-template-areas: 
+      "hd hd hd hd hd hd hd hd"
+      "main main main main main main main main"
+      "sd sd sd sd sd sd sd sd"
+      "ft ft ft ft ft ft ft ft";
+      /* max-width: 1000px; */
+      justify-content: center;
+    }
+    .blogs-container {
+      grid-template-columns: repeat(2, 1fr);
+    }
+}
+ /* MEDIA QUERY FOR LARGE SCREENS */
+  @media(min-width:900px){
       .container{
         grid-template-columns: repeat(8, 1fr);
         /* grid-template-columns: 300px 300px 300px; */
         grid-template-rows: 150px 1fr 100px;
         grid-template-areas: 
         "hd hd hd hd hd hd hd hd"
-        "sd main main main main main main main"
+        "sd sd main main main main main main"
         "ft ft ft ft ft ft ft ft";
-        max-width: 1000px;
+        /* max-width: 1000px; */
+        justify-content: center;
+      }
+      .blogs-container {
+        grid-template-columns: repeat(3, 1fr);
       }
   }
