--- a/CSS/index_style.css
+++ b/CSS/index_style.css
@@ -51,7 +51,7 @@
   }
 
   /* MEDIA QUERY FOR MEDIUM SCREENS */
-  @media(min-width:600px){
+  @media(min-width: 600px) and (max-width: 900px){
     .container{
       grid-template-columns: repeat(8, 1fr);
       grid-template-rows: 150px 1fr 100px;
@@ -68,7 +68,7 @@
     }
 }
  /* MEDIA QUERY FOR LARGE SCREENS */
-  @media(min-width:900px){
+  @media(min-width:901px){
       .container{
         grid-template-columns: repeat(8, 1fr);
         /* grid-template-columns: 300px 300px 300px; */
@@ -78,7 +78,7 @@
         "sd sd main main main main main main"
         "ft ft ft ft ft ft ft ft";
         /* max-width: 1000px; */
-        justify-content: center;
+        /* justify-content: center; */
       }
       .blogs-container {
         grid-template-columns: repeat(3, 1fr);
