--- a/CSS/blog_design_system.css
+++ b/CSS/blog_design_system.css
@@ -32,6 +32,14 @@ blockquote {
     background-color:lightblue;
 }
 
+.topnav a {
+    color: darkgrey;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+
 .footer p {
     font-size: 18px;
     font-family: monospace;
