--- a/CSS/index_style.css
+++ b/CSS/index_style.css
@@ -43,7 +43,7 @@
 
   /* MEDIA QUERY FOR MEDIUM SCREENS */
   @media(min-width: 600px) and (max-width: 900px){
-    .container{
+    .main-container{
       grid-template-columns: repeat(8, 1fr);
       grid-template-rows: 150px 1fr 100px;
       grid-template-areas: 
@@ -60,9 +60,8 @@
 }
  /* MEDIA QUERY FOR LARGE SCREENS */
   @media(min-width:901px){
-      .container{
+      .main-container{
         grid-template-columns: repeat(8, 1fr);
-        /* grid-template-columns: 300px 300px 300px; */
         grid-template-rows: 150px 1fr 100px;
         grid-template-areas: 
         "hd hd hd hd hd hd hd hd"
